# mojang-api-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs
