[package]
name = "mojang-api"
version = "0.4.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "A simple library for interfacing with the Mojang API. Includes full support for async/await."
repository = "https://github.com/caelunshun/mojang-api-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["minecraft"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = "=0.10.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.6"
num-bigint = "0.2"
uuid = { version = "0.7", features = ["v4", "serde"] }
bytes = "0.4"
log = "0.4"

[dev-dependencies]
mockito = "0.22"
tokio = "=0.2.0-alpha.6"