[package]
name = "mojang-api"
version = "0.5.1"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "A simple library for interfacing with the Mojang API. Includes full support for async/await."
repository = "https://github.com/caelunshun/mojang-api-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["minecraft"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.6"
num-bigint = "0.2"
uuid = { version = "0.7", features = ["v4", "serde"] }
log = "0.4"

[dev-dependencies]
mockito = "0.23"
tokio = { version = "1.6", features = ["full"] }
