[package]
name = "mojang-api"
version = "0.5.1"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "A simple library for interfacing with the Mojang API. Includes full support for async/await."
repository = "https://github.com/caelunshun/mojang-api-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["minecraft"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.6"
num-bigint = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4"
lazy_static = "1.4"

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1.10", features = ["full"] }
serde_json = "1.0"
